# ROS2-benchmark

./: .gitignore  benchmark_results.csv  clean_build.sh  clean_run.sh  log.csv  log_manager.sh  readme  run_script.sh
cassio_driver/: CMakeLists.txt  package.xml
cassio_driver/src/: sensor_node.cpp
cassio_interface/: CMakeLists.txt  package.xml
cassio_interface/msg/: Cassio.msg
cpp_pubsub/: package.xml
cpp_pubsub/src/: publisher_member_function.cpp
data/csv/: summary_base_double_sensor.csv  summary_base_test.csv  summary_base_test_instance_2.csv  summary_mtu9000_base_double_sensor.csv  summary_mtu9000_base_test.csv  summary_mtu9000_base_test_instance2.csv  summary_network_base_double_sensor.csv  summary_network_base_instance2.csv  summary_network_base_test.csv
data/result_analiser/: create_graphs.py  plot_comparison.py  plot_graphs.py
node_central/: CMakeLists.txt  package.xml
node_central/src/: node_central.cpp
results/base_double_sensor/benchmarks/: benchmark_results_10_1.csv  benchmark_results_10_10.csv  benchmark_results_10_2.csv  benchmark_results_10_3.csv  benchmark_results_10_4.csv  benchmark_results_10_5.csv  benchmark_results_10_6.csv  benchmark_results_10_7.csv  benchmark_results_10_8.csv  benchmark_results_10_9.csv  benchmark_results_12_1.csv  benchmark_results_12_10.csv  benchmark_results_12_2.csv  benchmark_results_12_3.csv  benchmark_results_12_4.csv  benchmark_results_12_5.csv  benchmark_results_12_6.csv  benchmark_results_12_7.csv  (+332 more)
scripts/: run_base.sh  run_base_double_sensor.sh  run_instance_2.sh  run_two_machine_battery.sh
(+2802 files in other folders)
